--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -260,6 +260,7 @@ button {
   font-weight: 500;
   padding: 0 10px;
   width: 1em;
+  pointer-events: none;
 }
 
 .main-navigation__additional {
@@ -1103,4 +1104,27 @@ button {
   min-height: 300px;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.form-error {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
