--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1112,19 +1112,27 @@ button {
 }
 
 @keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
+  0%,
+  100% {
+    transform: translateX(0);
   }
 
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-5px);
   }
 
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(5px);
   }
+}
 
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.shake {
+  animation: shake 0.6s;
 }
